ABS-273 Amend endpoint /api/v2/documents?caseRef=&page=&searchTerm= to accept search term
