# packages/applications-service-api/api/openapi.yaml
@@ -276,7 +276,7 @@ paths:
                 $ref: '#/components/schemas/DocumentListWrapper'
         '404':
           description: No documents found
-  '/api/v2/documents?caseRef={caseRef}&page={page}':
+  '/api/v2/documents?caseRef=&page=&searchTerm=':
     get:
       summary: Returns project documents
       description: Returns project documents
@@ -297,6 +297,13 @@ paths:
           schema:
             type: integer
           description: Page number
+        - in: query
+          name: searchTerm
+          example: 'pdf'
+          required: false
+          schema:
+            type: string
+          description: Search term
       responses:
         '200':
           description: Returns list of documents
